--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d --watch",
+    "dev": "webpack -p && webpack-dev-server --hot --inline",
     "prod": "webpack -p"
   },
   "repository": {
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/Zeeyed/keep-it#readme",
   "devDependencies": {
-    "webpack": "^3.1.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^3.1.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "react": "^15.6.1",
